RESOLVED FIXED310719
REGRESSION(309877@main): [macOS] TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation is a constant failure
https://bugs.webkit.org/show_bug.cgi?id=310719
Summary REGRESSION(309877@main): [macOS] TestWebKitAPI.UnifiedPDF.PasswordFormShouldD...
Marta Darbinyan
Reported 2026-03-25 10:34:12 PDT
The following test is constant failure on macOS after 309877@main. The test is flaky in EWS and adding additional runtime with re-runs on job requests. TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation Error: 07:36:12.545 920 TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation 07:36:12.545 920 2026-03-25 07:02:55.642 TestWebKitAPI[38309:303742] Encountered error: Error Domain=WKErrorDomain Code=4 "A JavaScript exception occurred" UserInfo={WKJavaScriptExceptionLineNumber=1, WKJavaScriptExceptionMessage=ReferenceError: Can't find variable: internals, WKJavaScriptExceptionColumnNumber=10, WKJavaScriptExceptionSourceURL=file:///Volumes/Data/worker/API-Tests-iOS-Simulator-EWS/build/WebKitBuild/Release-iphonesimulator/TestWebKitAPIResources.bundle/encrypted.pdf, NSLocalizedDescription=A JavaScript exception occurred} while evaluating script: internals.unlockPDFDocumentForTesting(document.querySelector('embed'), 'test') 07:36:12.545 920 07:36:12.545 920 /Volumes/Data/worker/iOS-26-Simulator-Build-EWS/build/Tools/TestWebKitAPI/cocoa/TestWKWebView.mm:622 07:36:12.545 920 Value of: !error 07:36:12.545 920 Actual: false 07:36:12.545 920 Expected: true History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation Test result: https://ews-build.webkit.org/#/builders/13/builds/128384
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-25 10:34:32 PDT
Marta Darbinyan
Comment 2 2026-03-25 11:21:23 PDT
Test gardening pull request: https://github.com/WebKit/WebKit/pull/61341
EWS
Comment 3 2026-03-25 11:51:17 PDT
Test gardening commit 309930@main (b2a3a2a74f44): <https://commits.webkit.org/309930@main> Reviewed commits have been landed. Closing PR #61341 and removing active labels.
Yusuke Suzuki
Comment 4 2026-03-25 14:11:40 PDT
EWS
Comment 5 2026-03-25 22:15:32 PDT
Committed 309963@main (d5e71ae3fde8): <https://commits.webkit.org/309963@main> Reviewed commits have been landed. Closing PR #61351 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.