REGRESSION(309877@main): [macOS] TestWebKitAPI.UnifiedPDF.PasswordFormShouldDismissAfterNavigation is a constant failure https://bugs.webkit.org/show_bug.cgi?id=310719 rdar://173336526

Reviewed by Marcus Plutowski.

Let's not calling scriptExecution()->globalObject() in Navigation event
timing as it can happen from non-API navigation, and `internals` setup
is having a timing issue when global object gets instantiated. We should
propagate DOMWrapperWorld stored in apiMethodTracker.

Test: Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm

* Source/WebCore/bindings/js/JSValueInWrappedObject.h:
(WebCore::JSValueInWrappedObject::JSValueInWrappedObject):
(WebCore::JSValueInWrappedObject::setWorld):
(WebCore::JSValueInWrappedObject::setWeakly):
(WebCore::JSValueInWrappedObject::set):
(WebCore::JSValueInWrappedObject::world const):
* Source/WebCore/page/NavigateEvent.cpp:
(WebCore::NavigateEvent::NavigateEvent):
(WebCore::NavigateEvent::create):
* Source/WebCore/page/NavigateEvent.h:
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::innerDispatchNavigateEvent):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):

Canonical link: https://commits.webkit.org/309963@main